[maxima] always trim the command string and remove line breaks and not only for plot commands so we get one single response in stdout from Maxima instead of multiple outputs that we only partially handle. This addresses multiple issues with multi-line commands with $ and ; endings.

BUG: 465277
FIXED-IN: 23.03