src/backends/maxima/testmaxima.cpp
@@ -40,7 +40,7 @@ void TestMaxima::testSimpleCommand()
     QCOMPARE( cleanOutput( e->result()->data().toString() ), QLatin1String("4") );
 }
 
-void TestMaxima::testMultilineCommand()
+void TestMaxima::testMultilineCommand01()
 {
     auto* e = evalExp( QLatin1String("2+2;3+3") );
 
@@ -49,6 +49,46 @@ void TestMaxima::testMultilineCommand()
 
     QCOMPARE(e->results().at(0)->data().toString(), QLatin1String("4"));
     QCOMPARE(e->results().at(1)->data().toString(), QLatin1String("6"));
+}
+
+/*
+ * test multiple variable assignments, separated by ';'.
+ */
+void TestMaxima::testMultilineCommand02()
+{
+    auto* e = evalExp( QLatin1String(
+        "var1:1;\n"
+        "var2:2;\n"
+        "var3:3;"
+    ) );
+
+    QVERIFY(e != nullptr);
+    QVERIFY(e->results().size() == 3);
+
+    QCOMPARE(e->results().at(0)->data().toString(), QLatin1String("1"));
+    QCOMPARE(e->results().at(1)->data().toString(), QLatin1String("2"));
+    QCOMPARE(e->results().at(2)->data().toString(), QLatin1String("3"));
+
+    e = evalExp(QLatin1String("kill(var1, var2, var3)"));
+    QVERIFY(e != nullptr);
+}
+
+/*
+ * test multiple variable assignments with a supressed output.
+ */
+void TestMaxima::testMultilineCommand03()
+{
+    auto* e = evalExp( QLatin1String(
+        "var1:1$\n"
+        "var2:2;\n"
+    ) );
+
+    QVERIFY(e != nullptr);
+    QVERIFY(e->results().size() == 1);
+    QCOMPARE(e->results().at(0)->data().toString(), QLatin1String("2"));
+
+    e = evalExp(QLatin1String("kill(var1, var2)"));
+    QVERIFY(e != nullptr);
 }
 
 //WARNING: for this test to work, Integration of Plots must be enabled
@@ -447,7 +487,7 @@ void TestMaxima::testVariableModel()
     QVERIFY(model != nullptr);
 
     auto* e1 = evalExp(QLatin1String("a: 15"));
-    auto* e2 = evalExp(QLatin1String("a: 15; b: \"Hello, world!\""));
+    auto* e2 = evalExp(QLatin1String("b: \"Hello, world!\""));
     auto* e3 = evalExp(QLatin1String("l: [1,2,3]"));
     auto* e4 = evalExp(QLatin1String("t: \"this is a \\\"quoted string\\\"\""));
     QVERIFY(e1 != nullptr);
