src/backends/maxima/testmaxima.h
@@ -1,7 +1,7 @@
 /*
     SPDX-License-Identifier: GPL-2.0-or-later
     SPDX-FileCopyrightText: 2009 Alexander Rieder <alexanderrieder@gmail.com>
-    SPDX-FileCopyrightText: 2018-2022 by Alexander Semke (alexander.semke@web.de)
+    SPDX-FileCopyrightText: 2018-2023 by Alexander Semke (alexander.semke@web.de)
 */
 
 #ifndef _TESTMAXIMA_H
@@ -23,8 +23,12 @@ private Q_SLOTS:
 
     //tests evaluating a simple command
     void testSimpleCommand();
+
     //tests a command, containing more than 1 line
-    void testMultilineCommand();
+    void testMultilineCommand01();
+    void testMultilineCommand02();
+    void testMultilineCommand03();
+
     //tests if the command queue works correctly
     void testCommandQueue();
 
